# Wakeguard

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
openspec/: config.yaml
openspec/changes/add-ui-whitelist-and-popup/: design.md  proposal.md  tasks.md
openspec/changes/add-ui-whitelist-and-popup/specs/new-device-dialog-prompt/: spec.md
openspec/changes/add-ui-whitelist-and-popup/specs/ui-launch-command/: spec.md
openspec/changes/add-ui-whitelist-and-popup/specs/ui-whitelist-management/: spec.md
openspec/changes/bootstrap-wakeguard-service/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-wakeguard-service/specs/wake-enforcement/: spec.md
openspec/changes/design-wake-enforcement-logic/: design.md  proposal.md  tasks.md
openspec/changes/design-wake-enforcement-logic/specs/wake-device-observation/: spec.md
openspec/changes/design-wake-enforcement-logic/specs/wake-enforcement-policy/: spec.md
openspec/changes/harden-monitor-disable-scan/: design.md  proposal.md  tasks.md
openspec/changes/harden-monitor-disable-scan/specs/device-disable-hardening/: spec.md
openspec/changes/improve-install-uninstall-flow/: design.md  proposal.md  tasks.md
openspec/changes/refactor-wake-device-identity/: design.md  proposal.md  tasks.md
src/: error.rs  install_path.rs  lib.rs  logging.rs  main.rs
src/config/: registry.rs
src/device/: identity.rs  mod.rs  powercfg.rs  topology.rs
src/policy/: mod.rs
src/service/: lifecycle.rs  mod.rs  windows_host.rs  worker.rs
src/ui/: mod.rs
tests/: worker_observation.rs
(+11 files in other folders)
