[package]
name = "wakeguard"
version = "0.1.0"
edition = "2021"
description = "Wakeguard Windows service skeleton"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
] }
windows-service = "0.7"
